--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Api",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Tafita",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.3",
-    "mongoose": "^6.3.0",
-    "nodemon": "^2.0.15"
-  }
+  "author": "",
+  "license": "ISC"
 }
